--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,39 +1,35 @@
 <h1>Eat da Burger Heading</h1>
 
-
-
-<h2>Burgers that are devoured!</h2>
-
+<h2>Burgers that are not devoured!</h2>
 <ul>
   {{#each burgers}}
     {{#unless devoured}}
-      {{> burgers/burger-block devoured=true}}
+      <li>{{burger_name}}</li>
+        <form class="devour-form">
+          <input type="hidden" id="id" value={{id}}>
+          <button type="submit">Devour</button>
+        </form>
     {{/unless}}
   {{/each}}
 </ul>
 
-<h2>Burgers that are not devoured!</h2>
-
+<h2>Burgers that are devoured!</h2>
 <ul>
   {{#each burgers}}
     {{#if devoured}}
-      {{> burgers/burger-block devoured=false}}
+      <div>
+        <li>{{burger_name}}</li>
+      </div>
     {{/if}}
   {{/each}}
 </ul>
 
 <h2>Add a Burger</h2>
-<form class="create-form">
+<form class="add-form">
 
   <div class="form-group">
     <label for="bur">Burger Name:</label>
-    <input type="text" id="bur" name="name">
-  </div>
-
-  <div class="form-group">
-    <label for="devoured">devoured?</label><br>
-    <input type="radio" name="devoured" value="1" checked> devoured!<br>
-    <input type="radio" name="devoured" value="0"> Not devoured
+    <input type="text" id="addBurger" name="name">
   </div>
 
   <button type="submit">Add Burger</button>
