--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -5,10 +5,14 @@
   {{#each burgers}}
     {{#unless devoured}}
       <li>{{burger_name}}</li>
-        <form class="devour-form">
+        <!--<form class="devour-form">
           <input type="hidden" id="id" value={{id}}>
           <button type="submit">Devour</button>
-        </form>
+        </form>-->
+        <form method="POST" action="/burger/devour?_method=PUT" class="button-size">
+					<input input type="hidden" name="burgerId" value={{id}}>
+					<button type="submit" class="btn btn-default">Devour</button>
+				</form>        
     {{/unless}}
   {{/each}}
 </ul>
@@ -25,7 +29,7 @@
 </ul>
 
 <h2>Add a Burger</h2>
-<form class="add-form">
+<!--<form class="add-form">
 
   <div class="form-group">
     <label for="bur">Burger Name:</label>
@@ -33,4 +37,10 @@
   </div>
 
   <button type="submit">Add Burger</button>
+</form>-->
+
+<form action="/burger/create" method="POST">
+  <label for="bur">Burger Name:</label>
+  <input type="text" name="burgerName" id="addBurger">
+  <button type="submit" id="text-enter-button">Submit</button>
 </form>
